Add controllers, routes, vuetify

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "joi": "^14.0.0",
+    "morgan": "^1.9.1",
+    "sequelize": "^4.40.0",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "eslint-config-standard": "^12.0.0",
